# healpix-orth-skymodel

./: .gitignore  README.md  pyproject.toml
src/healpix_orth_skymodel/: __init__.py  _jax_cpu.py  catalog.py  projection.py  render.py  resolution.py
src/healpix_orth_skymodel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
